Deleted reddit in german translation manifesto.json

--- a/src/locales/ge/manifesto.json
+++ b/src/locales/ge/manifesto.json
@@ -63,7 +63,7 @@
         "reusability": "Noch dramatischer ist, dass die Abhängigkeit von Open Source bedeutet, dass das gesamte Software-Kapital einer Plattform leicht wiederverwendet werden kann, und da der gesamte organisatorische Zustand ebenfalls öffentlich ist, können ganze Ökosysteme gegabelt werden, um neue alternative Plattformen mit veränderten Richtlinien und Zielen zu schaffen."
       }
     },
-    "ctaText": "Dieser Plan hat noch Platz für mehr Leute, also beteilige dich, indem du eine <0>E-Mail</0> schickst oder uns auf <1>Discord</1> oder <2>Reddit</2> beitrittst.",
+    "ctaText": "Dieser Plan hat noch Platz für mehr Leute, also beteilige dich, indem du eine <0>E-Mail</0> schickst oder uns auf <1>Discord</1> beitrittst.",
     "references": {
       "title": "references",
       "text": "<0>[1] Ersam, F. Blockchain Tokens and the dawn of the Decentralized Business Model. Medium. Aug 1, 2016.</0><0>[2] Srinivasan, B. S. Thoughts on Tokens. Medium. May 27, 2017.</0><0>[3] Dixon, C. Crypto Tokens: A Breakthrough in Open Network Design. Medium. June 1, 2017.</0><0>[4] Hirschman, Albert O. Exit, voice, and loyalty: Reaktionen auf den Niedergang in Unternehmen, Organisationen und Staaten. Vol. 25. Harvard University Press, 1970.</0><0>[5] Rochet, Jean-Charles, und Jean Tirole. "Platform competition in two-sided markets". Journal of the european economic association 1.4 (2003): 990-1029.</0>"
