Corrected comma in line 26 to antioch.json

--- a/src/locales/ge/antioch.json
+++ b/src/locales/ge/antioch.json
@@ -23,7 +23,7 @@
     },
     "testnetGoals": {
       "title": "Ziele des Testnet",
-      "subtitle": "Die unten aufgeführten Ziele sind eine vereinfachte Darstellung unserer Hauptziele für das Antioch Testnet"
+      "subtitle": "Die unten aufgeführten Ziele sind eine vereinfachte Darstellung unserer Hauptziele für das Antioch Testnet",
       "goals": {
         "substrateVersion": {
           "title": "Upgrade der Substratversion",
